Rename package; remove unnecessary null check; convert constants class to enum