@@ -1,11 +1,10 @@
 package compiler;
 
-import util.LogMessages;
-import util.Logger;
+import logger.LogMessages;
+import logger.Logger;
 
 import java.io.File;
 import java.util.List;
-import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
 public class FileGatherer {
@@ -18,21 +17,19 @@ public class FileGatherer {
 
     public List<String> javaFilesFromSources(List<String> sourceFiles) {
         return sourceFiles.stream()
-                .map(File::new)
-                .flatMap(this::javaFilesIn)
-                .collect(Collectors.toList());
+                          .map(File::new)
+                          .flatMap(this::javaFilesIn)
+                          .toList();
     }
 
     private Stream<String> javaFilesIn(File file) {
-        if (file == null) {
-            this.logger.printLine(LogMessages.NULL_FILE_ACCESS);
-        } else if (!file.exists()) {
-            this.logger.printLine(LogMessages.FILE_PATH_NOT_FOUND + ": %s", file.getName());
+        if (!file.exists()) {
+            this.logger.printLine(LogMessages.FILE_PATH_NOT_FOUND.string() + ": %s", file.getName());
         } else {
             if (file.isDirectory()) {
                 return Stream.ofNullable(file.listFiles())
-                        .flatMap(Stream::of)
-                        .flatMap(this::javaFilesIn);
+                             .flatMap(Stream::of)
+                             .flatMap(this::javaFilesIn);
             } else if (file.isFile() && file.getName().endsWith(".java")) {
                 return Stream.of(file.getPath());
             }
